# matrixmultiply

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.rst  build.rs  clippy.toml  index.html  justfile  search-index.js
.github/workflows/: ci.yml
benches/: bench1.rs  benchloop.py  benchmarks.rs
blas-bench/: Cargo.toml  README.md  build.rs
blas-bench/benches/: benchmarks.rs
ci/: miri.sh
docs/typst/: Makefile  x86_sgemm.typ
ensure_no_std/: Cargo.toml
examples/: benchmark.rs  usegemm.rs
matrixmultiply/: dgemm.v.html  fn.dgemm.html  fn.sgemm.html  index.html
matrixmultiply-asm/: Cargo.toml  build.rs
matrixmultiply-asm/microkernels/: blis_dgemm_8x4_avx.c  blis_sgemm_8x8_avx.c
matrixmultiply-asm/src/: lib.rs
matrixmultiply/gemm/: sgemm.v.html
src/: aligned_alloc.rs  archparam.rs  archparam_defaults.rs  cgemm_common.rs  cgemm_kernel.rs  constparse.rs  debugmacros.rs  dgemm_kernel.rs  dgemm_kernel_avx.rs  gemm.rs  i8gemm_kernel.rs  igemm_kernel.rs  kernel.rs  lib.rs  loopmacros.rs  packing.rs  pointer.rs  ptr.rs  sgemm_kernel.rs  sgemm_kernel_avx.rs  threading.rs  util.rs  zgemm_kernel.rs
src/matrixmultiply/src/: archparam.rs.html  debugmacros.rs.html  dgemm_kernel.rs.html  gemm.rs.html  kernel.rs.html  lib.rs.html  loopmacros.rs.html  pointer.rs.html  sgemm_kernel.rs.html  util.rs.html
src/x86/: macros.rs  mod.rs
testdefs/: testdefs.rs
tests/: sgemm.rs
